hphp/hack/test/typecheck/class_refinements/override-with-concrete-member+class-generic.php.exp
File "override-with-concrete-member+class-generic.php", line 25, characters 22-22:
The method `m` is not compatible with the overridden method (Typing[4341])
  File "override-with-concrete-member+class-generic.php", line 25, characters 24-26:
  Expected `int`
  File "override-with-concrete-member+class-generic.php", line 12, characters 36-36:
  But got `T`
